// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResults> component renders results 1`] = `
<styled.div>
  <VideoItem
    key="1234"
    selectVideo={[Function]}
    video={
      Object {
        "description": "Cats cats cats!!",
        "id": "1234",
        "publishedAt": "2018-03-24T09:30:02.000Z",
        "thumbnail": "",
        "title": "Another cat video",
      }
    }
  />
  <VideoItem
    key="1235"
    selectVideo={[Function]}
    video={
      Object {
        "description": "More cats cats!!",
        "id": "1235",
        "publishedAt": "2018-03-25T09:30:02.000Z",
        "thumbnail": "",
        "title": "Another cat video Two",
      }
    }
  />
</styled.div>
`;

exports[`<SearchResults> component styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  margin-top: 51px;
}

<div
  className="c0"
>
  <VideoItem
    key="1234"
    selectVideo={[Function]}
    video={
      Object {
        "description": "Cats cats cats!!",
        "id": "1234",
        "publishedAt": "2018-03-24T09:30:02.000Z",
        "thumbnail": "",
        "title": "Another cat video",
      }
    }
  />
  <VideoItem
    key="1235"
    selectVideo={[Function]}
    video={
      Object {
        "description": "More cats cats!!",
        "id": "1235",
        "publishedAt": "2018-03-25T09:30:02.000Z",
        "thumbnail": "",
        "title": "Another cat video Two",
      }
    }
  />
</div>
`;
